--- a/Deliverables/final_codewalk/santorini.config
+++ b/Deliverables/final_codewalk/santorini.config
@@ -1,1 +1,1 @@
-{"IP" : "10.105.52.174", "port" : 8888, "default-player" : "smartplayer.py"}
+{"IP" : "127.0.0.1", "port" : 8049, "default-player" : "randomplayer.py"}
