fixes some things

--- a/Deliverables/final_codewalk/santorini.config
+++ b/Deliverables/final_codewalk/santorini.config
@@ -1,1 +1,1 @@
-{"IP" : "127.0.0.1", "port" : 8049, "default-player" : "randomplayer.py"}
+{"IP" : "", "port" : 8056, "default-player" : "randomplayer.py"}
